[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/OptionMenu.gd" type="Script" id=1]
[ext_resource path="res://picture/mainMenu.jpeg" type="Texture" id=2]

[node name="OptionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.5
margin_top = -32.0
margin_right = 144.5
margin_bottom = 32.0

[node name="VBoxContaine" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 66.0
margin_bottom = 64.0

[node name="Fullscreen" type="Label" parent="HBoxContainer/VBoxContaine"]
margin_top = 8.0
margin_right = 66.0
margin_bottom = 22.0
size_flags_vertical = 6
text = "Fullscreen"

[node name="Master" type="Label" parent="HBoxContainer/VBoxContaine"]
margin_top = 42.0
margin_right = 66.0
margin_bottom = 56.0
size_flags_vertical = 6
text = "Audio"

[node name="Check" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 70.0
margin_right = 289.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Check"]
margin_right = 219.0
margin_bottom = 24.0

[node name="Master" type="HSlider" parent="HBoxContainer/Check"]
margin_top = 28.0
margin_right = 219.0
margin_bottom = 64.0
size_flags_vertical = 3

[node name="BackBtn" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 12.0
text = "Back"

[connection signal="toggled" from="HBoxContainer/Check/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="HBoxContainer/Check/Master" to="." method="_on_Master_value_changed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
